feat: resolve issues sonar